syntax = "proto3";

option java_package = "io.grpc.examples.todo";
option java_multiple_files = true;
option java_outer_classname = "JavaTodoService";

//Important to be always same in every environment
package todo;

import "google/protobuf/empty.proto";

message Empty {}

message IdRequest {
  string id = 1;
}

message NewTodo {
  string name = 1;
  string description = 2;
  bool done = 3;
}

message PersistedTodo {
  string id = 1;
  string name = 2;
  string description = 3;
  bool done = 4;
}

service TodoService {
  rpc CreateTodo(NewTodo) returns(IdRequest) {}
  rpc GetTodo(IdRequest) returns(PersistedTodo) {}
  rpc GetTodos(google.protobuf.Empty) returns(stream PersistedTodo) {}
}